cmake_minimum_required(VERSION 3.0)

set (PROJECT_NAME Random)
project(${PROJECT_NAME})

add_subdirectory(src)

set(PERMISSIONS OWNER_READ 
    OWNER_WRITE 
    OWNER_EXECUTE 
    GROUP_READ 
    GROUP_WRITE 
    GROUP_EXECUTE 
    WORLD_READ 
    WORLD_WRITE 
    WORLD_EXECUTE
)

install(FILES src/noise 
    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR} 
    PERMISSIONS ${PERMISSIONS}
)